# sentinel-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hardstop.config.yaml  pyproject.toml  requirements.lock.txt  sentinel.config.yaml
.github/: FUNDING.yml
.venv_cli_smoke/: pyvenv.cfg
config/: keywords.yaml  sources.example.yaml  sources.yaml
docs/: ARCHITECTURE.md  DOCS_AUDIT.md  EXECUTION_PLAN.md  INTEGRATIONS.md  LICENSING.md  P2_READINESS.md  SPEC_HARDSTOP_V1.md  SPEC_SENTINEL_V1.md  WHA-22_AUDIT.md
docs/audit/: Contract_Index.md  DB_and_Migrations_06.md  Determinism_Proof_04.md  README.md  Repo_ID_Card.md
docs/runbooks/: reporting.md
docs/specs/: brief-v2.md  run-record.schema.json
src/hardstop/: __init__.py  cli.py
src/hardstop/alerts/: alert_builder.py  alert_models.py  correlation.py  impact_scorer.py
src/sentinel/: __init__.py  cli.py
tests/: conftest.py  test_api_layer.py  test_artifact_digests.py  test_cli_run_records.py  test_cli_sources.py  test_correlation.py  test_demo_pipeline.py  test_export_api.py  test_fetcher.py  test_golden_run.py  test_impact_scorer.py  test_init.py  test_network_linker.py  test_output_renderer_only.py  test_preflight_source_batch.py  test_run_record.py  test_run_status.py  test_source_health.py  test_source_health_integration.py  test_suppression_engine.py  test_suppression_integration.py  test_time_utils.py
tests/fixtures/: event_spill.json  facilities.csv  incident_evidence_spill.json  lanes.csv  shipments_snapshot.csv
tests/output/: test_incident_replay.py
tools/: validate_run_records.py
(+84 files in other folders)
